[metadata]
name = runpod
version = 0.0.0  # Placeholder value, will be overridden by setuptools_scm
description = ðŸ | Python library for RunPod API and serverless worker SDK.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = runpod, ai, gpu, serverless, SDK, API, python, library
url = https://github.com/runpod/runpod-python
project_urls =
    Bug Tracker = https://github.com/runpod/runpod-python/issues
author = RunPod
author_email = support@runpod.io
license = MIT
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >= 3.9
install_requires =
    aiohttp >= 3.8.4
    backoff >= 2.2.1
    boto3 >= 1.26.165
    pillow >= 9.5.0
    py-cpuinfo >= 9.0.0
    python-dotenv >= 1.0.0
    requests >= 2.31.0
    tqdm-loggable >= 0.1.4
    fastapi[all] >= 0.99.0

[options.extras_require]
test =
    asynctest
    nest_asyncio
    pytest
    pytest-cov
    pytest-timeout
    pytest-asyncio

[setuptools_scm]
write_to = runpod/_version.py
