[metadata]
name = runpod
version = 0.0.0  # Placeholder value, will be overridden by setuptools_scm
description = ðŸ | Python library for RunPod API and serverless worker SDK.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = runpod, ai, gpu, serverless, SDK, API, python, library
url = https://github.com/runpod/runpod-python

project_urls =
    Bug Tracker = https://github.com/runpod/runpod-python/issues
    Changelog = https://github.com/runpod/runpod-python/blob/main/CHANGELOG.md

author = RunPod
author_email = support@runpod.io
license = MIT
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >= 3.8


[options.extras_require]
test =
    asynctest
    nest_asyncio
    pylint
    pytest
    pytest-cov
    pytest-timeout
    pytest-asyncio

[setuptools_scm]
write_to = runpod/_version.py
